# hzutils

./: CMakeLists.txt  README.md  main.cpp
include/hz/: algorithm.hpp  allocator.hpp  array.hpp  atomic.hpp  bit.hpp  concepts.hpp  double_list.hpp  hash.hpp  initializer_list.hpp  limits.hpp  manually_destroy.hpp  manually_init.hpp  new.hpp  optional.hpp  pair.hpp  rb_tree.hpp  result.hpp  slab.hpp  spinlock.hpp  string.hpp  string_utils.hpp  string_view.hpp  type_traits.hpp  unordered_map.hpp  utility.hpp  variant.hpp  vector.hpp
